# Project

./: Впечатление.txt
Final_bike/: CMakeLists.txt  Final_bike.sln
Final_bike/Final_bike/: Final_bike.vcxproj  Final_bike.vcxproj.filters  Vector.cpp  Vector.h  bike.cpp  bike.h  main.cpp  main.h
Final_bike/Final_bike/Documentation/: main.tex
Final_bike/Final_bike/codes/: Vector.cpp  bike.cpp  main.cpp
Final_bike/Final_bike/headers/: bike.h
Final_bike/Final_bike/x64/Debug/: vc143.idb
Final_bike/Final_bike/x64/Debug/Final_bike.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Final_bike.lastbuildstate
